# ezmsg-panel

./: .gitignore  pyproject.toml
.github/workflows/: python-tests.yml
src/ezmsg/panel/: recorder.py  scrollinglineplot.py  spectrum.py
