[project]
name = "ezmsg-panel"
version = "0.6.7"
description = "Panel patterns for ezmsg systems"
authors = [
  { name = "Griffin Milsap", email = "griffin.milsap@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ezmsg>=3.5.0",
    "panel>=1.5.3",
]

[project.urls]
homepage = "https://github.com/griffinmilsap/ezmsg-panel"

[project.optional-dependencies]
sigproc = [
    "ezmsg-sigproc>=1.8.2,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
